--- a/web/home.html
+++ b/web/home.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>谢氏集合后台管理</title>
+    <title>耶啵集团后台管理</title>
     <script src="layui-v2.5.6/layui/layui.js"></script>
     <link rel="stylesheet" href="layui-v2.5.6/layui/css/layui.css"></link>
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo layui-hide-xs layui-bg-black">谢氏集合后台管理</div>
+        <div class="layui-logo layui-hide-xs layui-bg-black">耶啵集团后台管理</div>
         <!-- 头部区域（可配合layui 已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <!-- 移动端显示 -->
